# workforce

./: .RData  .Rhistory  ._example_plan.graphml  .gitignore  .packer.py.un~  .swp  .tester.py.un~  .todo.md.un~  4935_example_plan.graphml  5605_example_plan.graphml  5675_example_plan.graphml  5839_example_plan.graphml  AGENTS.md  AUTHORS.rst  BUILD_INSTALLER.md  CLAUDE.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  IO.py  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  TODO  Workfile  activefiles.txt  addnewelement.py  arraycompare.py  backuptis.py  barebones.py  basechanger.py  basechanger1.py  basechanger2.py  binadder.py  binminuser.py  build-frontend.sh  build_windows.ps1  (+92 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: python-publish.yml
IO/: IO.py  arr2file.py  arrelementnumberdec.py  basechanger.py  binadder.py  bitarrdec.py  bitarrin.py  bitarrstatsdec.py  combinations.py  decarrin.py  file2arr.py  fileappendout.py  filein.py  fileout.py  ftdec.py  multibitarrin.py  newfileout.py  newsplitter.py  oldcombinations.py  oldsplitter.py  plot.py  plotter2yout.py  printerout.py  pythint.py  splitter.out  splitter.py
config/: addnewelement.conf  addnewelement.pyconf  binadder.pyconf  combinations.cln  combinations.conf  combinations.csv  combinations.dot  combinations.pyconf  combinations.sc  main.conf  main.pyconf  newconf.pyconf  newsplitter.pyconf  splitter.conf  splitter.pyconf  temp.sc
docs/: Makefile  api.rst  architecture.rst  codebase_diagram.rst  conf.py  contributing.rst  glossary.rst  index.rst  installation.rst  make.bat  presentation.graphml  presentation.wf  requirements.txt  tutorial.rst  usage.rst  web_bridge_protocol.md  web_editor_browser_plan.md
docs/images/: icon.xbm  makeico.sh
docs/normalpres/: main.md
docs/presentation/: .Rhistory  main.md
docs/technicalpres/: gantt.py
example_workers/scripts/: graph_plan.py
flowchartstuff/: graph.dot  protocol.cln  protocol.cln~  protocol.csv  protocol.dot  protocol.sc  protocol.sc~  test.cln  test.csv  test.dot  test.sc
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  global.css  index.css  main.tsx
frontend/src/components/: CanvasContextMenu.tsx  (+4 more)
gui/: gui.py
managers/scripts/: graph_plan.py  log_graph.py
scripts/: cleanup_workspaces.py
src/: workforce.py
tester/: main.py  template.py
tester/IO/: bitarrin.py  decin.py  dfin.py  elementnumberdec.py  http.py  newfileout.py  plotter2yout.py  plotterout.py  stringdec.py
tester/config/: addnewelement.pyconf  combinations.pyconf  splitter.pyconf
tests/: 14360_echo_one.graphml  __init__.py  conftest.py  test_batch_operations.py  test_batch_position.py  test_cli_path_defaults_to_run.py  test_edge_types.py  test_events.py  test_frontend_release_guard.py  test_gui_queue.py  test_integration_multiworkspace.py  test_recent_files.py  test_remote_execution.py  test_run.py  test_runner.py  test_save_as.py  test_scheduler.sh  test_scheduler_events.py  test_server.py  test_server_shutdown.py  test_utils.py  test_web_bridge.py  test_workspace_shell_route.py
tests/edit/: test_edit.py
tests/gui/: test_canvas.py
tests/run/: test_runner.py
tests/server/: test_routes.py
tests/test_data/: echo_one.graphml  echo_one_exp.graphml  echo_three.graphml  echo_three_ran.graphml  empty_exp.graphml
tests/web/: test_bridge_api.py  test_schema_mapping.py  test_static_assets_packaging.py  test_web_cli.py  test_workspace_spa_routes.py
ttester/: template.py
ttester/IO/: arrelementnumberdec.py
ttester/config/: main.pyconf  newconf.xml
workforce/: .gui.py.un~  RUNNODES.py  __init__.py  __main__.py  backupgraphmanager.py  cli.py  dsworkforce.py  dsworkforce2.py  dsworkforce3.py  dsworkforce4.py  edit.py  edit_element.py  flask_server.py  gptedit.py  graph_manager.py  gui.py  gui.py~  mgui.py  newgui.py  newnewplot.py  newtestworkforce.py  newview.py  ngui.py  nngui.py  nnngui.py  nnnngui.py  nnnnngui.py  nnnnnngui.py  old__init__.py  ppgui.py  prevgui.py  run.py  run_node.py  runner_workforce.py  runner_workforce2.py  schedule.py  server.py  simpworkforce.py  test.graphml  test.py  (+20 more)
workforce/edit/: __init__.py  cli.py  client.py  graph.py
workforce/gui/: __init__.py  app.py  canvas.py  client.py  core.py  presets.py  recent.py  server.py  state.py
workforce/run/: __init__.py  cli.py  client.py
workforce/server/: __init__.py  __main__.py  app.py  context.py  events.py  execution.py  graph_queue.py  graph_store.py  queue.py  registry.py  routes.py  scheduler.py  shutdown.py  sockets.py  tasks.py
workforce/utils/: server_utils.py
workforce/web/: __init__.py  bridge.py  launcher.py
writing/: compile.sh  gantt.py  main.md
(+52 files in other folders)
