[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workforce"
version = "1.1.7"
description = "Run bash commands with python multiprocessing. Includes a Tkinter GUI for workflow editing."
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
  {name = "Theo Portlock", email = "zn.tportlock@gmail.com"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "networkx",
  "flask",
  "flask-socketio",
  "python-socketio",
  "websocket-client",
  "requests",
  "platformdirs"
]

[project.urls]
"Homepage" = "https://github.com/theoportlock/workforce"

[project.scripts]
wf = "workforce.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"] # Style, Errors, Import sorting

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]
