[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workforce"
version = "1.1.19"
description = "Run bash commands with Python multiprocessing and a web-based workflow editor."
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
  {name = "Theo Portlock", email = "zn.tportlock@gmail.com"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "networkx",
  "flask",
  "flask-socketio",
  "python-socketio",
  "websocket-client",
  "requests",
  "platformdirs"
]

[project.urls]
"Homepage" = "https://github.com/theoportlock/workforce"

[project.scripts]
workforce = "workforce.__main__:main"

[tool.setuptools.packages.find]
where = ["."]


[tool.setuptools.package-data]
"workforce.web" = [
  "static/**/*.html",
  "static/**/*.css",
  "static/**/*.js",
  "static/assets/**/*"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "E722", "F401", "F403", "I001"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
  "workforce.run.client",
  "workforce.run.cli",
  "workforce.server",
  "workforce.server.*",
  "workforce.utils",
]
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["."]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]
